# sha2

./: Makefile  pyproject.toml  sha256.py
.github/workflows/: deploy-docs.yml  distribution.yml  doc-test.yml  linter.yml  release.yml  test.yml
docs/: index.rst
src/sha2/: __init__.py  sha256.py  sha512.py
tests/: test_sha256.py  test_sha512.py
